syntax = "proto3";

package api;

service Score {
    rpc AddScore (AddRequest) returns (AddResponse) {}
    rpc GetScore (GetRequest) returns (GetResponse) {}
}
message AddRequest {
    string user = 1;
    float time = 2;
    string email = 3;
}
message AddResponse {
    string added = 1;
}

message GetRequest {
}

message GetResponse {
    repeated User scores = 1;
}

message User {
    sfixed64 id = 1;
    string name = 2;
    double score = 3;
    string email = 4;
}


option go_package = "./";
